[package]
name = "orange"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "Hardware support crate for OrangeSoC."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10"
bitflags = "1.2"
